user-manage path bug
