# game-social-network-ui/src/app/services/models/user-response.ts
@@ -1,0 +1,9 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface UserResponse {
+  email?: string;
+  firstname?: string;
+  id?: number;
+  lastname?: string;
+  password?: string;
+}
